generated/PatitoParser.py
# Generated from Patito.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PatitoParser ( Parser ):

    grammarFileName = "Patito.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'programa'", "'inicio'", "'fin'", "'vars'", 
                     "'entero'", "'flotante'", "'escribe'", "'si'", "'sino'", 
                     "'mientras'", "'haz'", "'nula'", "'retorna'", "'+'", 
                     "'-'", "'*'", "'/'", "'>'", "'<'", "'!='", "'=='", 
                     "'='", "';'", "','", "':'", "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "PROGRAMA", "INICIO", "FIN", "VARS", 
                      "ENTERO", "FLOTANTE", "ESCRIBE", "SI", "SINO", "MIENTRAS", 
                      "HAZ", "NULA", "RETORNA", "MAS", "MENOS", "POR", "ENTRE", 
                      "MAYOR", "MENOR", "DISTINTO", "IGUAL2", "IGUAL", "PCOMA", 
                      "COMA", "DPUNTOS", "PIZQ", "PDER", "LLAVEIZQ", "LLAVEDER", 
                      "ID", "CTE_FLOT", "CTE_ENT", "LETRERO", "WS" ]

    RULE_programa = 0
    RULE_varsOpc = 1
    RULE_funcsOpc = 2
    RULE_vars = 3
    RULE_declaracionList = 4
    RULE_declaracion = 5
    RULE_idLista = 6
    RULE_idResto = 7
    RULE_tipo = 8
    RULE_funcs = 9
    RULE_tipoFunc = 10
    RULE_paramsOpc = 11
    RULE_paramLista = 12
    RULE_paramResto = 13
    RULE_llamada = 14
    RULE_argsOpc = 15
    RULE_argLista = 16
    RULE_argResto = 17
    RULE_cuerpo = 18
    RULE_estatutoList = 19
    RULE_estatuto = 20
    RULE_asigna = 21
    RULE_condicion = 22
    RULE_sinoOpc = 23
    RULE_ciclo = 24
    RULE_imprime = 25
    RULE_retorno = 26
    RULE_impLista = 27
    RULE_impResto = 28
    RULE_impElem = 29
    RULE_expresion = 30
    RULE_relOpc = 31
    RULE_opRel = 32
    RULE_exp = 33
    RULE_termino = 34
    RULE_factor = 35
    RULE_signoOpc = 36
    RULE_cte = 37

    ruleNames =  [ "programa", "varsOpc", "funcsOpc", "vars", "declaracionList", 
                   "declaracion", "idLista", "idResto", "tipo", "funcs", 
                   "tipoFunc", "paramsOpc", "paramLista", "paramResto", 
                   "llamada", "argsOpc", "argLista", "argResto", "cuerpo", 
                   "estatutoList", "estatuto", "asigna", "condicion", "sinoOpc", 
                   "ciclo", "imprime", "retorno", "impLista", "impResto", 
                   "impElem", "expresion", "relOpc", "opRel", "exp", "termino", 
                   "factor", "signoOpc", "cte" ]

    EOF = Token.EOF
    PROGRAMA=1
    INICIO=2
    FIN=3
    VARS=4
    ENTERO=5
    FLOTANTE=6
    ESCRIBE=7
    SI=8
    SINO=9
    MIENTRAS=10
    HAZ=11
    NULA=12
    RETORNA=13
    MAS=14
    MENOS=15
    POR=16
    ENTRE=17
    MAYOR=18
    MENOR=19
    DISTINTO=20
    IGUAL2=21
    IGUAL=22
    PCOMA=23
    COMA=24
    DPUNTOS=25
    PIZQ=26
    PDER=27
    LLAVEIZQ=28
    LLAVEDER=29
    ID=30
    CTE_FLOT=31
    CTE_ENT=32
    LETRERO=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMA(self):
            return self.getToken(PatitoParser.PROGRAMA, 0)

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def PCOMA(self):
            return self.getToken(PatitoParser.PCOMA, 0)

        def varsOpc(self):
            return self.getTypedRuleContext(PatitoParser.VarsOpcContext,0)


        def funcsOpc(self):
            return self.getTypedRuleContext(PatitoParser.FuncsOpcContext,0)


        def INICIO(self):
            return self.getToken(PatitoParser.INICIO, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(PatitoParser.CuerpoContext,0)


        def FIN(self):
            return self.getToken(PatitoParser.FIN, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = PatitoParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(PatitoParser.PROGRAMA)
            self.state = 77
            self.match(PatitoParser.ID)
            self.state = 78
            self.match(PatitoParser.PCOMA)
            self.state = 79
            self.varsOpc()
            self.state = 80
            self.funcsOpc()
            self.state = 81
            self.match(PatitoParser.INICIO)
            self.state = 82
            self.cuerpo()
            self.state = 83
            self.match(PatitoParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsOpcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_(self):
            return self.getTypedRuleContext(PatitoParser.VarsContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_varsOpc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarsOpc" ):
                listener.enterVarsOpc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarsOpc" ):
                listener.exitVarsOpc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarsOpc" ):
                return visitor.visitVarsOpc(self)
            else:
                return visitor.visitChildren(self)




    def varsOpc(self):

        localctx = PatitoParser.VarsOpcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varsOpc)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.vars_()
                pass
            elif token in [2, 5, 6, 12, 28]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsOpcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcs(self):
            return self.getTypedRuleContext(PatitoParser.FuncsContext,0)


        def funcsOpc(self):
            return self.getTypedRuleContext(PatitoParser.FuncsOpcContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_funcsOpc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncsOpc" ):
                listener.enterFuncsOpc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncsOpc" ):
                listener.exitFuncsOpc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncsOpc" ):
                return visitor.visitFuncsOpc(self)
            else:
                return visitor.visitChildren(self)




    def funcsOpc(self):

        localctx = PatitoParser.FuncsOpcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcsOpc)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 6, 12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.funcs()
                self.state = 90
                self.funcsOpc()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARS(self):
            return self.getToken(PatitoParser.VARS, 0)

        def declaracionList(self):
            return self.getTypedRuleContext(PatitoParser.DeclaracionListContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars" ):
                return visitor.visitVars(self)
            else:
                return visitor.visitChildren(self)




    def vars_(self):

        localctx = PatitoParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(PatitoParser.VARS)
            self.state = 96
            self.declaracionList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(PatitoParser.DeclaracionContext,0)


        def declaracionList(self):
            return self.getTypedRuleContext(PatitoParser.DeclaracionListContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_declaracionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionList" ):
                listener.enterDeclaracionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionList" ):
                listener.exitDeclaracionList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionList" ):
                return visitor.visitDeclaracionList(self)
            else:
                return visitor.visitChildren(self)




    def declaracionList(self):

        localctx = PatitoParser.DeclaracionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracionList)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.declaracion()
                self.state = 99
                self.declaracionList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.declaracion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idLista(self):
            return self.getTypedRuleContext(PatitoParser.IdListaContext,0)


        def DPUNTOS(self):
            return self.getToken(PatitoParser.DPUNTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(PatitoParser.TipoContext,0)


        def PCOMA(self):
            return self.getToken(PatitoParser.PCOMA, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = PatitoParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaracion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.idLista()
            self.state = 105
            self.match(PatitoParser.DPUNTOS)
            self.state = 106
            self.tipo()
            self.state = 107
            self.match(PatitoParser.PCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def idResto(self):
            return self.getTypedRuleContext(PatitoParser.IdRestoContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_idLista

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdLista" ):
                listener.enterIdLista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdLista" ):
                listener.exitIdLista(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdLista" ):
                return visitor.visitIdLista(self)
            else:
                return visitor.visitChildren(self)




    def idLista(self):

        localctx = PatitoParser.IdListaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_idLista)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(PatitoParser.ID)
            self.state = 110
            self.idResto()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdRestoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMA(self):
            return self.getToken(PatitoParser.COMA, 0)

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def idResto(self):
            return self.getTypedRuleContext(PatitoParser.IdRestoContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_idResto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdResto" ):
                listener.enterIdResto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdResto" ):
                listener.exitIdResto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdResto" ):
                return visitor.visitIdResto(self)
            else:
                return visitor.visitChildren(self)




    def idResto(self):

        localctx = PatitoParser.IdRestoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idResto)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(PatitoParser.COMA)
                self.state = 113
                self.match(PatitoParser.ID)
                self.state = 114
                self.idResto()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTERO(self):
            return self.getToken(PatitoParser.ENTERO, 0)

        def FLOTANTE(self):
            return self.getToken(PatitoParser.FLOTANTE, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = PatitoParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not(_la==5 or _la==6):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipoFunc(self):
            return self.getTypedRuleContext(PatitoParser.TipoFuncContext,0)


        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def PIZQ(self):
            return self.getToken(PatitoParser.PIZQ, 0)

        def paramsOpc(self):
            return self.getTypedRuleContext(PatitoParser.ParamsOpcContext,0)


        def PDER(self):
            return self.getToken(PatitoParser.PDER, 0)

        def LLAVEIZQ(self):
            return self.getToken(PatitoParser.LLAVEIZQ, 0)

        def varsOpc(self):
            return self.getTypedRuleContext(PatitoParser.VarsOpcContext,0)


        def cuerpo(self):
            return self.getTypedRuleContext(PatitoParser.CuerpoContext,0)


        def LLAVEDER(self):
            return self.getToken(PatitoParser.LLAVEDER, 0)

        def PCOMA(self):
            return self.getToken(PatitoParser.PCOMA, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncs" ):
                return visitor.visitFuncs(self)
            else:
                return visitor.visitChildren(self)




    def funcs(self):

        localctx = PatitoParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.tipoFunc()
            self.state = 121
            self.match(PatitoParser.ID)
            self.state = 122
            self.match(PatitoParser.PIZQ)
            self.state = 123
            self.paramsOpc()
            self.state = 124
            self.match(PatitoParser.PDER)
            self.state = 125
            self.match(PatitoParser.LLAVEIZQ)
            self.state = 126
            self.varsOpc()
            self.state = 127
            self.cuerpo()
            self.state = 128
            self.match(PatitoParser.LLAVEDER)
            self.state = 129
            self.match(PatitoParser.PCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NULA(self):
            return self.getToken(PatitoParser.NULA, 0)

        def tipo(self):
            return self.getTypedRuleContext(PatitoParser.TipoContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_tipoFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoFunc" ):
                listener.enterTipoFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoFunc" ):
                listener.exitTipoFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipoFunc" ):
                return visitor.visitTipoFunc(self)
            else:
                return visitor.visitChildren(self)




    def tipoFunc(self):

        localctx = PatitoParser.TipoFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tipoFunc)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(PatitoParser.NULA)
                pass
            elif token in [5, 6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.tipo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsOpcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramLista(self):
            return self.getTypedRuleContext(PatitoParser.ParamListaContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_paramsOpc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamsOpc" ):
                listener.enterParamsOpc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamsOpc" ):
                listener.exitParamsOpc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamsOpc" ):
                return visitor.visitParamsOpc(self)
            else:
                return visitor.visitChildren(self)




    def paramsOpc(self):

        localctx = PatitoParser.ParamsOpcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramsOpc)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.paramLista()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def DPUNTOS(self):
            return self.getToken(PatitoParser.DPUNTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(PatitoParser.TipoContext,0)


        def paramResto(self):
            return self.getTypedRuleContext(PatitoParser.ParamRestoContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_paramLista

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamLista" ):
                listener.enterParamLista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamLista" ):
                listener.exitParamLista(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamLista" ):
                return visitor.visitParamLista(self)
            else:
                return visitor.visitChildren(self)




    def paramLista(self):

        localctx = PatitoParser.ParamListaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_paramLista)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(PatitoParser.ID)
            self.state = 140
            self.match(PatitoParser.DPUNTOS)
            self.state = 141
            self.tipo()
            self.state = 142
            self.paramResto()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamRestoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMA(self):
            return self.getToken(PatitoParser.COMA, 0)

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def DPUNTOS(self):
            return self.getToken(PatitoParser.DPUNTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(PatitoParser.TipoContext,0)


        def paramResto(self):
            return self.getTypedRuleContext(PatitoParser.ParamRestoContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_paramResto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamResto" ):
                listener.enterParamResto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamResto" ):
                listener.exitParamResto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamResto" ):
                return visitor.visitParamResto(self)
            else:
                return visitor.visitChildren(self)




    def paramResto(self):

        localctx = PatitoParser.ParamRestoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_paramResto)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.match(PatitoParser.COMA)
                self.state = 145
                self.match(PatitoParser.ID)
                self.state = 146
                self.match(PatitoParser.DPUNTOS)
                self.state = 147
                self.tipo()
                self.state = 148
                self.paramResto()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LlamadaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def PIZQ(self):
            return self.getToken(PatitoParser.PIZQ, 0)

        def argsOpc(self):
            return self.getTypedRuleContext(PatitoParser.ArgsOpcContext,0)


        def PDER(self):
            return self.getToken(PatitoParser.PDER, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_llamada

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLlamada" ):
                listener.enterLlamada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLlamada" ):
                listener.exitLlamada(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLlamada" ):
                return visitor.visitLlamada(self)
            else:
                return visitor.visitChildren(self)




    def llamada(self):
